# neuralDiv_blender

./: .gitignore  README.md  __init__.py  include.py  operators.py  update_wheels.py
blender_extension/: README.md  __init__.py  create_extension.sh  include.py  models.py  operators.py  pyproject.toml  ui_panel.py
blender_extension/data/jobs/net_sphere/: hyperparameters.json
blender_extension/data/jobs/net_sphere_organic/: hyperparameters.json
blender_extension/data/jobs/sphere_blocky/: hyperparameters.json
extension/: __init__.py  blender_manifest.toml  requirements.txt  ui_panel.py
training/: README.me  train_hyperparameters.json
